Fix Notifications example on IE [#155240782]

--- a/src/css/dropdowns/dropdowns.scss
+++ b/src/css/dropdowns/dropdowns.scss
@@ -65,6 +65,7 @@
 
     .dropdown-menu {
       width: initial;
+      width: auto;
     }
   }
 
